updated readme with new project name

--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "obsidian-day-planner",
-  "version": "0.5.8",
-  "description": "A plugin to help you plan your day and setup pomodoro timers",
+  "name": "obsidian-simple-day-planner",
+  "version": "0.0.1",
+  "description": "A plugin to help you plan your day —simply!",
   "main": "main.js",
   "scripts": {
     "dev": "rollup --config rollup.config.js -w",
