--- a/manifest.json
+++ b/manifest.json
@@ -1,8 +1,8 @@
 {
-  "id": "obsidian-day-planner",
-  "name": "Day Planner",
-  "version": "0.5.8",
-  "description": "A plugin to help you plan your day and setup pomodoro timers",
+  "id": "obsidian-simple-day-planner",
+  "name": "Simple Day Planner",
+  "version": "0.0.1",
+  "description": "A plugin to help you plan your day —simply!",
   "isDesktopOnly": false,
   "js": "main.js",
   "css": "style.css"
