big changes for the day; still broken

--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
     "typescript": "^4.3.4"
   },
   "dependencies": {
+    "obsidian-daily-notes-interface": "0.9.0",
     "svelte": "^3.38.2"
   }
 }
