--- a/package.json
+++ b/package.json
@@ -4,8 +4,8 @@
   "description": "A plugin to help you plan your day —simply!",
   "main": "main.js",
   "scripts": {
-    "dev": "rollup --config rollup.config.js -w",
-    "build": "rollup --config rollup.config.js",
+    "dev": "rollup --config rollup.config.dev.js -w",
+    "build": "rollup --config rollup.config.prod.js",
     "test": "cross-env TS_NODE_COMPILER_OPTIONS='{ \"module\": \"commonjs\" }' mocha -r ts-node/register -r ignore-styles -r jsdom-global/register tests/**/*.test.ts",
     "coverage": "nyc -r lcov -e .ts -x \"*.test.ts\" npm run test"
   },
@@ -32,6 +32,7 @@
     "rollup": "^2.52.1",
     "rollup-plugin-copy": "^3.4.0",
     "rollup-plugin-svelte": "^6.1.1",
+    "rollup-plugin-zip": "^1.0.3",
     "svelte-check": "^1.6.0",
     "svelte-preprocess": "^4.7.3",
     "ts-node": "^9.1.1",
