--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -1,8 +1,7 @@
-name: Release Build
+name: release
 
 on:
   push:
-    # Sequence of patterns matched against refs/tags
     tags:
     - '*' # Push events to matching any tag format, i.e. 1.0, 20.15.10
 
