--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -19,10 +19,10 @@ jobs:
       uses: actions/cache@v2
       with:
         path: ~/.npm
-        key: npm-${{ hashFiles('package-lock.json') }}
+        key: npm-${{ hashFiles('package.json') }}
         restore-keys: npm-
     - name: install dependencies
-      run: npm ci --ignore-scripts
+      run: npm install
     - name: test
       run: npm test
     - name: build
