--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -3,7 +3,7 @@ name: release
 on:
   push:
     tags:
-    - '*' # Push events to matching any tag format, i.e. 1.0, 20.15.10
+    - '*' # Push events to matching any tag format, i.e. v1.0, v20.15.10
 
 env:
   PLUGIN_NAME: obsidian-simple-day-planner
@@ -13,16 +13,20 @@ jobs:
     runs-on: ubuntu-latest
     steps:
     - uses: actions/checkout@v2
-    - name: Use Node.js
+    - name: use node.js
       uses: actions/setup-node@v1
+    - name: npm package-lock.json ssh/https hack
+      run: git config --global url."https://github.com/".insteadOf ssh://git@github.com/
     - name: cache dependencies
       uses: actions/cache@v2
       with:
         path: ~/.npm
-        key: npm-${{ hashFiles('package.json') }}
+        key: npm-${{ hashFiles('package-lock.json') }}
         restore-keys: npm-
     - name: install dependencies
-      run: npm install
+      run: npm ci --ignore-scripts
+    - name: test
+      run: npm test
     - name: test
       run: npm test
     - name: build
