--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "obsidian-simple-day-planner",
-  "version": "0.1.2",
+  "version": "0.1.3",
   "description": "A plugin to help you plan your day —simply!",
   "main": "main.js",
   "scripts": {
@@ -19,10 +19,11 @@
     "@tsconfig/svelte": "^1.0.13",
     "@types/chai": "^4.2.18",
     "@types/mocha": "^8.2.2",
-    "@types/moment": "^2.13.0",
     "@types/node": "^14.17.3",
     "chai": "^4.3.4",
+    "chai-sorted": "^0.2.0",
     "cross-env": "^7.0.3",
+    "fast-check": "^3.1.1",
     "ignore-styles": "^5.0.1",
     "jsdom": "^16.6.0",
     "jsdom-global": "^3.0.2",
