Bugfix/obsidian 1.0 compatability (#18)
This work includes various graphical tweaks to the plugin to support Obsidian v1.0.  Some of the tweaks include:
- Changed the height of various status bar items to better align with intended height of the component
- Removed status bar card entirely
- Improved utilization of built-in obsidian color variables to align better with the user's chosen theme
- Added a subtle amount of transparency to timeline to reduce contrast when the user has the translucent background setting enabled
- Updated readme images to represent latest graphical changes in Obsidian v1.0

Non-graphical changes:
- Updated all dependencies to resolve `npm audit` warnings
- Updated node-version in github actions to use `18.x`

resolves #17

--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -24,7 +24,7 @@ jobs:
         key: npm-${{ hashFiles('package-lock.json') }}
         restore-keys: npm-
     - name: install dependencies
-      run: npm ci --ignore-scripts
+      run: npm clean-install --ignore-scripts
     - name: test
       run: npm test
     - name: build
