--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -12,6 +12,8 @@ jobs:
     - uses: actions/checkout@v2
     - name: use node.js
       uses: actions/setup-node@v1
+      with:
+        node-version: 18.x
     - name: npm package-lock.json ssh/https hack
       run: git config --global url."https://github.com/".insteadOf ssh://git@github.com/
     - name: cache dependencies
@@ -21,6 +23,6 @@ jobs:
         key: npm-${{ hashFiles('package-lock.json') }}
         restore-keys: npm-
     - name: install dependencies
-      run: npm ci --ignore-scripts
+      run: npm clean-install --ignore-scripts
     - name: test
       run: npm test
