--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -15,6 +15,8 @@ jobs:
     - uses: actions/checkout@v2
     - name: use node.js
       uses: actions/setup-node@v1
+      with:
+        node-version: 18.x
     - name: npm package-lock.json ssh/https hack
       run: git config --global url."https://github.com/".insteadOf ssh://git@github.com/
     - name: cache dependencies
